Update for Translation

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,60 +1,59 @@
 {
-    "HP": "Hit Points",
-    "MP": "Magic Points",
-    "Birth Year": "Birth Year",
-    "Age":"Age",
-    "Occupation": "Occupation",
-    "Ransom": "Ransom",
-    "Gender": "Gender",
-    "Homeland": "Homeland",
-    "Reputation": "Reputation",
-    "Standard of Living": "Standard of Living",
-    "Tribe": "Tribe",
-    "Clan": "Clan",
-    "Base Income": "Base Income",
-    "Campaign": "Campaign",
+    "RQG.HP": "Hit Points",
+    "RQG.MP": "Magic Points",
+    "RQG.BirthYear": "Birth Year",
+    "RQG.Age":"Age",
+    "RQG.Occupation": "Occupation",
+    "RQG.Ransom": "Ransom",
+    "RQG.Gender": "Gender",
+    "RQG.Homeland": "Homeland",
+    "RQG.Reputation": "Reputation",
+    "RQG.StandardofLiving": "Standard of Living",
+    "RQG.Tribe": "Tribe",
+    "RQG.Clan": "Clan",
+    "RQG.BaseIncome": "Base Income",
+    "RQG.Campaign": "Campaign",
 
-    "STR":"STR",
-    "Strength": "Strength",
-    "CON":"CON",
-    "Constitution":"Constitution",
-    "SIZ":"SIZ",
-    "Size":"Size",
-    "INT":"INT",
-    "Intelligence":"Intelligence",
-    "POW":"POW",
-    "Power":"Power",
-    "DEX":"DEX",
-    "Dexterity":"Dexterity",
-    "CHA":"CHA",
-    "Charisma":"Charisma",
+    "RQG.STR":"STR",
+    "RQG.Strength": "Strength",
+    "RQG.CON":"CON",
+    "RQG.Constitution":"Constitution",
+    "RQG.SIZ":"SIZ",
+    "RQG.Size":"Size",
+    "RQG.INT":"INT",
+    "RQG.Intelligence":"Intelligence",
+    "RQG.POW":"POW",
+    "RQG.Power":"Power",
+    "RQG.DEX":"DEX",
+    "RQG.Dexterity":"Dexterity",
+    "RQG.CHA":"CHA",
+    "RQG.Charisma":"Charisma",
 
-    "Air" : "Air",
-    "Fire": "Fire",
-    "Darkness" : "Darkness",
-    "Water": "Water",
-    "Earth" : "Earth",
-    "Moon": "Moon",
+    "RQG.Air" : "Air",
+    "RQG.Fire": "Fire",
+    "RQG.Darkness" : "Darkness",
+    "RQG.Water": "Water",
+    "RQG.Earth" : "Earth",
+    "RQG.Moon": "Moon",
 
-    "Man" : "Man",
-    "Beast": "Beast",
-    "Fertility": "Fertility",
-    "Death": "Death",
-    "Harmony": "Harmony",
-    "Disorder": "Disorder",
-    "Truth": "Truth",
-    "Illusion": "Illusion",
-    "Stasis": "Stasis",
-    "Movement": "Movement",
+    "RQG.Man" : "Man",
+    "RQG.Beast": "Beast",
+    "RQG.Fertility": "Fertility",
+    "RQG.Death": "Death",
+    "RQG.Harmony": "Harmony",
+    "RQG.Disorder": "Disorder",
+    "RQG.Truth": "Truth",
+    "RQG.Illusion": "Illusion",
+    "RQG.Stasis": "Stasis",
+    "RQG.Movement": "Movement",
 
-
-    "Characteristics": "Characteristics",
-    "Base": "Base",
-    "Increase": "Increase",
-    "Modifier": "Modifier",
-    "Value": "Value",
-    "Roll": "Roll",
+    "RQG.Characteristics": "Characteristics",
+    "RQG.Base": "Base",
+    "RQG.Increase": "Increase",
+    "RQG.Modifier": "Modifier",
+    "RQG.Value": "Value",
+    "RQG.Roll": "Roll",
    
-    "Category": "Category",
-    "Experience": "Experience"
+    "RQG.Category": "Category",
+    "RQG.Experience": "Experience"
 }
