--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1,60 +1,75 @@
 {
-    "HP": "Hit Points",
-    "MP": "Magic Points",
-    "Birth Year": "Birth Year",
-    "Age":"Age",
-    "Occupation": "Occupation",
-    "Ransom": "Ransom",
-    "Gender": "Gender",
-    "Homeland": "Homeland",
-    "Reputation": "Reputation",
-    "Standard of Living": "Standard of Living",
-    "Tribe": "Tribe",
-    "Clan": "Clan",
-    "Base Income": "Base Income",
-    "Campaign": "Campaign",
+    "RQG.HP": "Hit Points",
+    "RQG.MP": "Magic Points",
+    "RQG.BirthYear": "Ne.e en",
+    "RQG.Age":"Age",
+    "RQG.Occupation": "Occupation",
+    "RQG.Ransom": "Rancon",
+    "RQG.Gender": "Genre",
+    "RQG.Homeland": "Origine",
+    "RQG.Reputation": "Reputation",
+    "RQG.StandardofLiving": "Niveau de vie",
+    "RQG.Tribe": "Tribu",
+    "RQG.Clan": "Clan",
+    "RQG.BaseIncome": "Revenu de base",
+    "RQG.Campaign": "Campagne",
 
-    "STR":"STR",
-    "Strength": "Strength",
-    "CON":"CON",
-    "Constitution":"Constitution",
-    "SIZ":"SIZ",
-    "Size":"Size",
-    "INT":"INT",
-    "Intelligence":"Intelligence",
-    "POW":"POW",
-    "Power":"Power",
-    "DEX":"DEX",
-    "Dexterity":"Dexterity",
-    "CHA":"CHA",
-    "Charisma":"Charisma",
+    "RQG.STR":"FOR",
+    "RQG.Strength": "Force",
+    "RQG.CON":"CON",
+    "RQG.Constitution":"Constitution",
+    "RQG.SIZ":"TAI",
+    "RQG.Size":"Taille",
+    "RQG.INT":"INT",
+    "RQG.Intelligence":"Intelligence",
+    "RQG.POW":"POU",
+    "RQG.Power":"Pouvoir",
+    "RQG.DEX":"DEX",
+    "RQG.Dexterity":"Dexterite",
+    "RQG.CHA":"CHA",
+    "RQG.Charisma":"Charisme",
 
-    "Air" : "Air",
-    "Fire": "Fire",
-    "Darkness" : "Darkness",
-    "Water": "Water",
-    "Earth" : "Earth",
-    "Moon": "Moon",
+    "RQG.Air" : "Air",
+    "RQG.Fire": "Feu",
+    "RQG.Darkness" : "Tenebres",
+    "RQG.Water": "Eau",
+    "RQG.Earth" : "Terre",
+    "RQG.Moon": "Lune",
 
-    "Man" : "Man",
-    "Beast": "Beast",
-    "Fertility": "Fertility",
-    "Death": "Death",
-    "Harmony": "Harmony",
-    "Disorder": "Disorder",
-    "Truth": "Truth",
-    "Illusion": "Illusion",
-    "Stasis": "Stasis",
-    "Movement": "Movement",
+    "RQG.Man" : "Homme",
+    "RQG.Beast": "Bete",
+    "RQG.Fertility": "Fertilite",
+    "RQG.Death": "Mort",
+    "RQG.Harmony": "Harmonie",
+    "RQG.Disorder": "Desordre",
+    "RQG.Truth": "Vérité",
+    "RQG.Illusion": "Illusion",
+    "RQG.Stasis": "Stase",
+    "RQG.Movement": "Mouvement",
 
+    "RQG.Characteristics": "Caracteristiques",
+    "RQG.Base": "Base",
+    "RQG.Increase": "Augmentation",
+    "RQG.Modifier": "Modificateur",
+    "RQG.Value": "Valeur",
+    "RQG.Roll": "Jet de dé",
+    "RQG.Passions": "Passions",
+    "RQG.HitLocations": "Localisations",
+    "RQG.MeleeAttacks": "Attaque de melee",
+    "RQG.MissileAttacks": "Attaque a distance",
+    "RQG.NaturalAttacks": "Attaque naturelle",
+    "RQG.RuneSpell": "Magie runique",
+    "RQG.SpiritSpell": "Magie spirituelle",
 
-    "Characteristics": "Characteristics",
-    "Base": "Base",
-    "Increase": "Increase",
-    "Modifier": "Modifier",
-    "Value": "Value",
-    "Roll": "Roll",
    
-    "Category": "Category",
-    "Experience": "Experience"
+    "RQG.Category": "Categorie",
+    "RQG.Experience": "Experience",
+
+    "RQG.General": "General",
+    "RQG.Skills": "Competences",
+    "RQG.Combat": "Combat",
+    "RQG.Magic": "Magie",
+    "RQG.Description": "Description",
+    "RQG.Items": "Equipement",
+    "RQG.Flags": "Drapeaux"
 }
