Add Dialog box for rolls part 1

--- a/lang/en.json
+++ b/lang/en.json
@@ -82,5 +82,10 @@
     "RQG.MeleeWeapon": "Melee weapons",
     "RQG.MissileWeapon": "Missile weapons",
     "RQG.NaturalWeapon": "Natural weapons",
-    "RQG.Shields": "Shields"
+    "RQG.Shields": "Shields",
+
+    "RQG.Points": "Points",
+    "RQG.Rune": "Rune",
+    "RQG.Cult": "Cult"
+
 }
