--- a/lang/fr.json
+++ b/lang/fr.json
@@ -66,14 +66,14 @@
     "RQG.Experience": "Experience",
 
     "RQG.General": "General",
-    "RQG.Skills": "Competences",
+    "RQG.Skills": "Compétences",
     "RQG.Combat": "Combat",
     "RQG.Magic": "Magie",
     "RQG.Description": "Description",
     "RQG.Items": "Equipement",
     "RQG.Flags": "Drapeaux",
 
-    "RQG.Agility": "Agilite",
+    "RQG.Agility": "Agilité",
     "RQG.Communication": "Communication",
     "RQG.Knowledge": "Connaissances",
     "RQG.Manipulation": "Manipulation",
