Update to Summary and skill sheets

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1,6 +1,6 @@
 {
-    "RQG.HP": "Points de vie",
-    "RQG.MP": "Points de magie",
+    "RQG.HP": "PV",
+    "RQG.MP": "MP",
     "RQG.BirthYear": "Ne.e en",
     "RQG.Age":"Age",
     "RQG.Occupation": "Occupation",
