--- a/lang/fr.json
+++ b/lang/fr.json
@@ -107,6 +107,7 @@
     "RQG.MAXHITPOINTS": "Max PV",
     "RQG.ARMOR": "Armure",
     "RQG.WOUNDS": "Blessures",
-    "RQG.RANGE": "Range"
+    "RQG.RANGE": "Range",
 
+    "RQG.HEROSOUL": "Heros"
 }
