--- a/lang/fr.json
+++ b/lang/fr.json
@@ -109,5 +109,45 @@
     "RQG.WOUNDS": "Blessures",
     "RQG.RANGE": "Range",
 
-    "RQG.HEROSOUL": "Heros"
+    "RQG.HEROSOUL": "Heros",
+    "RQG.Skillname": "Competence",
+    "RQG.Skillvalue": "Valeur",
+    "RQG.Catmodifier": "Mod de categorie",
+    "RQG.DamageBonus": "Bonus aux dommages",
+    
+    "RQG.1H_Mace":"Masse à 1 main",
+    "RQG.2H_Mace":"Masse à 2 mains",
+    "RQG.Sling":"Fronde",
+    "RQG.Large_Shield":"Grand bouclier",
+    "RQG.Pike":"Sarisse",
+    "RQG.Medium_Shield":"Bouclier Moyen",
+    "RQG.Javelin":"Javelot",
+    "RQG.1H_Axe":"Hache à 1 main",
+    "RQG.Dagger":"Dague",
+    "RQG.Rapier":"Rapière",
+    "RQG.2H_Spear":"Lance à 2 mains",
+    "RQG.Crossbow":"Arbalette",
+    "RQG.Shortsword":"Epée courte",
+    "RQG.Kopis":"Kopis",
+    "RQG.Throwing_Dagger":"Dague de lancer",
+    "RQG.Grapple":"Saisie",
+    "RQG.2H_Axe":"Hache à 2 mains",
+    "RQG.Self_Bow":"Arc court",
+    "RQG.Kick":"Coup de pied",
+    "RQG.Small_Shield":"Petit bouclier",
+    "RQG.Fist":"Coup de poing",
+    "RQG.1H_Spear":"Lance à 1 main",
+    "RQG.Pole_Lasso":"Perche-lasso",
+    "RQG.Thrown_Axe":"Hache de lancer",
+    "RQG.Composite_Bow":"Arc composite",
+    "RQG.Broadsword":"Epée large",
+    "RQG.2H_Sword":"Epée à 2 mains",
+    "RQG.Improvised_Weapon":"Arme improvisée",
+
+    "RQG.AttackType":"Type d'attaque",
+    "RQG.SkillUsed":"Compétence",
+    "RQG.Damage":"Dégats",
+    "RQG.SpecialType":"Type de spécial",
+
+    "RQG.Attack": "Attaque"    
 }
