Commited a lot of fix, will prepare release notes for next commit

--- a/lang/en.json
+++ b/lang/en.json
@@ -154,6 +154,7 @@
     "RQG.Damage":"Damage",
     "RQG.SpecialType":"Special type",
 
-    "RQG.Attack": "Attack"
+    "RQG.Attack": "Attack",
+    "RQG.GENERALWOUNDS": "General wounds"
 
 }
