--- a/lang/fr.json
+++ b/lang/fr.json
@@ -149,5 +149,7 @@
     "RQG.Damage":"Dégats",
     "RQG.SpecialType":"Type de spécial",
 
-    "RQG.Attack": "Attaque"    
+    "RQG.Attack": "Attaque",
+    "RQG.GENERALWOUNDS": "Blessure générale"
+
 }
