Pushing to fix some urgent bug like the Special type being easier in a dropdown than with a freetext. Beware Armor is not fully implemented and will be completed at a later point

--- a/lang/en.json
+++ b/lang/en.json
@@ -167,5 +167,17 @@
     "RQG.Result": "Result",
     "RQG.Failure": "Failure",
     "RQG.Fumble": "Fumble",
-    "RQG.MainTab":"Main"
+    "RQG.MainTab":"Main",
+
+    "RQG.WSR":"WSR",
+    "RQG.HPMax":"HP Max",
+    "RQG.HPCurrent": "HP Current",
+    "RQG.Range": "Range",
+    "RQG.Rate": "Rate",
+    "RQG.Amno": "Amno",
+    "RQG.Edit": "Edit",
+
+    "RQG.Slash":"S",
+    "RQG.Crush":"C",
+    "RQG.Impale":"I"
 }
